# docker-lineapy-dvc

./: .gitmodules  Dockerfile  docker-compose.yml  pyproject.toml  setup.sh
example/: housing_example.ipynb
example/.ipynb_checkpoints/: housing_example-checkpoint.ipynb
notebook/: example.ipynb
