[tool.poetry]
name = "lineapy-test"
version = "0.1.0"
description = ""
authors = ["Thomas Fraunholz <tf@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "^1.5.1"
dvc = "^2.31.0"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
jupyter = "^1.0.0"
notebook = "^6.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
